Include performance tests in workflows
[MAILPOET-4945]

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -719,6 +719,14 @@ workflows:
             - static_analysis_php8
             - qa_js
             - qa_php
+      - performance_tests:
+          <<: *slack-fail-post-step
+          name: performance_tests
+          requires:
+            - unit_tests
+            - static_analysis_php8
+            - qa_js
+            - qa_php
       - js_tests:
           <<: *slack-fail-post-step
           requires:
@@ -791,6 +799,7 @@ workflows:
             - integration_test_woo_cot_sync
             - acceptance_tests_woo_cot_sync
             - acceptance_tests_woo_cot_no_sync
+            - performance_tests
 
   nightly:
     triggers:
