Fix codeception PHP 8.2 deprecation notices
[MAILPOET-4872]

--- a/mailpoet/composer.json
+++ b/mailpoet/composer.json
@@ -78,13 +78,15 @@
       "./tools/vendor/composer.phar --working-dir=tasks/code_sniffer install",
       "./tools/vendor/composer.phar --working-dir=tasks/phpstan install",
       "php ./tasks/fix-guzzle.php",
-      "php ./tasks/fix-php82-deprecations.php"
+      "php ./tasks/fix-php82-deprecations.php",
+      "php ./tasks/fix-php82-codeception.php"
     ],
     "post-install-cmd": [
       "./tools/vendor/composer.phar --working-dir=tasks/code_sniffer install",
       "./tools/vendor/composer.phar --working-dir=tasks/phpstan install",
       "php ./tasks/fix-guzzle.php",
-      "php ./tasks/fix-php82-deprecations.php"
+      "php ./tasks/fix-php82-deprecations.php",
+      "php ./tasks/fix-php82-codeception.php"
     ],
     "pre-autoload-dump": [
       "php ./tasks/fix-codeception-stub.php",
