--- a/mailpoet/tasks/phpstan/composer.json
+++ b/mailpoet/tasks/phpstan/composer.json
@@ -1,6 +1,6 @@
 {
   "require": {
-    "php-stubs/woocommerce-stubs": "^7.0",
+    "php-stubs/woocommerce-stubs": "7.3.0",
     "phpstan/phpstan": "1.4.10",
     "phpstan/phpstan-doctrine": "1.2.11",
     "phpstan/phpstan-phpunit": "1.0.0",
