--- a/mailpoet/package.json
+++ b/mailpoet/package.json
@@ -38,6 +38,7 @@
     "@babel/runtime-corejs3": "^7.17.8",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
+    "@marvelapp/react-ab-test": "^3.1.0",
     "@types/select2": "^4.0.55",
     "@woocommerce/components": "^10.0.0",
     "@wordpress/a11y": "^3.14.0",
