--- a/mailpoet/composer.json
+++ b/mailpoet/composer.json
@@ -35,7 +35,8 @@
     "phpunit/phpunit": "8.5.25",
     "totten/lurkerlite": "^1.3",
     "vlucas/phpdotenv": "5.4.1",
-    "wp-cli/wp-cli-bundle": "^2.7"
+    "wp-cli/wp-cli": "2.8.x-dev",
+    "wp-cli/wp-cli-bundle": "2.6.x-dev"
   },
   "autoload": {
     "classmap": [
