--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -183,6 +183,7 @@ jobs:
             ./do download:woo-commerce-subscriptions-zip 4.6.0
             ./do download:woo-commerce-memberships-zip 1.23.1
             ./do download:woo-commerce-blocks-zip 8.8.2
+            ./do download:automate-woo-zip 5.6.8
       - run:
           name: Dump tests ENV variables for acceptance tests
           command: |
@@ -344,6 +345,9 @@ jobs:
       woo_blocks_version:
         type: string
         default: ''
+      automate_woo_version:
+        type: string
+        default: ''
       enable_cot:
         type: integer
         default: 0
@@ -397,6 +401,14 @@ jobs:
                 command: |
                   cd tests/docker
                   docker-compose run --rm -w /project --entrypoint "./do download:woo-commerce-blocks-zip << parameters.woo_blocks_version >>" --no-deps -e WP_GITHUB_USERNAME=${WP_GITHUB_USERNAME} -e WP_GITHUB_TOKEN=${WP_GITHUB_TOKEN} codeception_acceptance
+      - when:
+          condition: << parameters.automate_woo_version >>
+          steps:
+            - run:
+                name: Download AutomateWoo
+                command: |
+                  cd tests/docker
+                  docker-compose run --rm -w /project --entrypoint "./do download:automate-woo-zip << parameters.automate_woo_version >>" --no-deps -e WP_GITHUB_USERNAME=${WP_GITHUB_USERNAME} -e WP_GITHUB_TOKEN=${WP_GITHUB_TOKEN} codeception_acceptance
       - run:
           name: Group acceptance tests
           command: |
@@ -817,6 +829,7 @@ workflows:
           woo_subscriptions_version: latest
           woo_memberships_version: latest
           woo_blocks_version: latest
+          automate_woo_version: latest
           requires:
             - build
       - acceptance_tests:
@@ -826,6 +839,7 @@ workflows:
           woo_subscriptions_version: 4.3.0
           woo_memberships_version: 1.21.0
           woo_blocks_version: 6.8.0
+          automate_woo_version: 5.1.1
           mysql_command: --max_allowed_packet=100M --default-storage-engine=MYISAM
           mysql_image: mysql:5.5
           codeception_image_version: 7.4-cli_20220605.0
