Add database cleaner for integration tests
MAILPOET-5145

--- a/mailpoet/tests/integration.suite.yml
+++ b/mailpoet/tests/integration.suite.yml
@@ -13,3 +13,4 @@ error_level: E_ALL
 extensions:
   enabled:
     - CheckSkippedTestsExtension
+    - MailPoet\TestsSupport\IntegrationCleanupExtension
