Fix PNPM permission error when setting up the dev env
This commit fixes the following error when running ./do setup to configure the dev env on a new Linux machine:

```
[ExecStack] Running pnpm install --frozen-lockfile --prefer-offline
Internal Error: EACCES: permission denied, mkdir '/.cache'
Error: EACCES: permission denied, mkdir '/.cache'
```

It sets the $XDG_DATA_HOME variable to /tmp/.cache in docker-compose.yml. This will affect other programs that rely on $XDG_DATA_HOME, but it is probably harmless. I was not able to find an env variable that is specific to PNPM, and that would affect only the location of its cache directory (https://pnpm.io/next/npmrc#cache-dir).

[MAILPOET-5177]

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,7 @@ services:
       PHP_IDE_CONFIG: 'serverName=Mailpoet'
       COMPOSER_HOME: '/tmp/.composer'
       NPM_CONFIG_CACHE: '/tmp/.npm'
+      XDG_CACHE_HOME: '/tmp/.cache'
       MAILPOET_DEV_SITE: 1
     volumes:
       - './wordpress:/var/www/html'
