--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,7 @@ version: 2.1
 
 orbs:
   slack: circleci/slack@4.2.0
+  grafana: grafana/k6@1.1.3
 
 slack-fail-post-step: &slack-fail-post-step
   post-steps:
@@ -463,6 +464,7 @@ jobs:
           path: tests/_output
   performance_tests:
     working_directory: /home/circleci/mailpoet/mailpoet
+    cloud: true
     machine:
       image: ubuntu-2204:2022.10.2
       docker_layer_caching: false
@@ -863,7 +865,6 @@ workflows:
           name: performance_latest
           url: https://qawp.net
           pw: $WP_TEST_PERFORMANCE_PW
-          cloud: true
           scenario: nightlytests
           requires:
             - build
