--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,7 @@ version: 2.1
 
 orbs:
   slack: circleci/slack@4.2.0
+  grafana: grafana/k6@1.1.3
 
 slack-fail-post-step: &slack-fail-post-step
   post-steps:
@@ -463,11 +464,12 @@ jobs:
           path: tests/_output
   performance_tests:
     working_directory: /home/circleci/mailpoet/mailpoet
+    executor: grafana/k6
+    cloud: true
     machine:
       image: ubuntu-2204:2022.10.2
       docker_layer_caching: false
     parameters:
-      cloud: true
       mysql_command:
         type: string
         default: ''
