--- a/mailpoet/.env.sample
+++ b/mailpoet/.env.sample
@@ -37,3 +37,8 @@ WP_GITHUB_TOKEN=
 # Jira username/email and a token from https://id.atlassian.com/manage/api-tokens:
 WP_JIRA_USER=
 WP_JIRA_TOKEN=
+
+# k6 performance test suite
+# Get following secrets from the Secret Store, look for "MailPoet: plugin .env":
+WP_TEST_PERFORMANCE_DATA_URL=
+WP_TEST_PERFORMANCE_PW=
