Add tmpfs mount for faster MySQLing
MAILPOET-5145

--- a/mailpoet/tests/docker/docker-compose.yml
+++ b/mailpoet/tests/docker/docker-compose.yml
@@ -112,6 +112,8 @@ services:
       MYSQL_PASSWORD: wordpress
     volumes:
       - /dev/shm:/dev/shm
+    tmpfs:
+      - /var/lib/mysql:rw
     ports:
       - 4401:3306
     healthcheck:
