Streamline test results output to k6 cloud
[MAILPOET-5196]

--- a/mailpoet/.env.sample
+++ b/mailpoet/.env.sample
@@ -42,3 +42,5 @@ WP_JIRA_TOKEN=
 # Get following secrets from the Secret Store, look for "MailPoet: plugin .env":
 WP_TEST_PERFORMANCE_DATA_URL=
 WP_TEST_PERFORMANCE_PW=
+K6_CLOUD_TOKEN=
+K6_CLOUD_ID=
