--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -3,6 +3,8 @@ name: Pull Request Stats
 on:
   pull_request:
     types: [opened]
+    branches-ignore:
+      - 'dependabot/**'
 
 jobs:
   stats:
