--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -907,7 +907,7 @@ workflows:
       - performance_tests:
           <<: *slack-fail-post-step
           name: performance_latest
-          url: https://qawp.net
+          url: https://mpperftesting.mystagingwebsite.com
           pw: $WP_TEST_PERFORMANCE_PW
           scenario: nightlytests
           requires:
