--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -629,6 +629,18 @@ jobs:
       woo_core_version:
         type: string
         default: ''
+      woo_subscriptions_version:
+        type: string
+        default: ''
+      woo_memberships_version:
+        type: string
+        default: ''
+      woo_blocks_version:
+        type: string
+        default: ''
+      automate_woo_version:
+        type: string
+        default: ''
     steps:
       - attach_workspace:
           at: /home/circleci
@@ -656,6 +668,38 @@ jobs:
                 command: |
                   cd tests/docker
                   docker-compose run --rm -w /project --entrypoint "./do download:woo-commerce-zip << parameters.woo_core_version >>" --no-deps -e WP_GITHUB_USERNAME=${WP_GITHUB_USERNAME} -e WP_GITHUB_TOKEN=${WP_GITHUB_TOKEN} codeception_integration
+      - when:
+          condition: << parameters.woo_subscriptions_version >>
+          steps:
+            - run:
+                name: Download WooCommerce Subscriptions
+                command: |
+                  cd tests/docker
+                  docker-compose run --rm -w /project --entrypoint "./do download:woo-commerce-subscriptions-zip << parameters.woo_subscriptions_version >>" --no-deps -e WP_GITHUB_USERNAME=${WP_GITHUB_USERNAME} -e WP_GITHUB_TOKEN=${WP_GITHUB_TOKEN} codeception_integration
+      - when:
+          condition: << parameters.woo_memberships_version >>
+          steps:
+            - run:
+                name: Download WooCommerce Memberships
+                command: |
+                  cd tests/docker
+                  docker-compose run --rm -w /project --entrypoint "./do download:woo-commerce-memberships-zip << parameters.woo_memberships_version >>" --no-deps -e WP_GITHUB_USERNAME=${WP_GITHUB_USERNAME} -e WP_GITHUB_TOKEN=${WP_GITHUB_TOKEN} codeception_integration
+      - when:
+          condition: << parameters.woo_blocks_version >>
+          steps:
+            - run:
+                name: Download WooCommerce Blocks
+                command: |
+                  cd tests/docker
+                  docker-compose run --rm -w /project --entrypoint "./do download:woo-commerce-blocks-zip << parameters.woo_blocks_version >>" --no-deps -e WP_GITHUB_USERNAME=${WP_GITHUB_USERNAME} -e WP_GITHUB_TOKEN=${WP_GITHUB_TOKEN} codeception_integration
+      - when:
+          condition: << parameters.automate_woo_version >>
+          steps:
+            - run:
+                name: Download AutomateWoo
+                command: |
+                  cd tests/docker
+                  docker-compose run --rm -w /project --entrypoint "./do download:automate-woo-zip << parameters.automate_woo_version >>" --no-deps -e WP_GITHUB_USERNAME=${WP_GITHUB_USERNAME} -e WP_GITHUB_TOKEN=${WP_GITHUB_TOKEN} codeception_integration
       - run:
           name: 'PHP Integration tests'
           command: |
@@ -943,6 +987,10 @@ workflows:
           <<: *slack-fail-post-step
           name: integration_oldest
           woo_core_version: 7.5.0
+          woo_subscriptions_version: 4.3.0
+          woo_memberships_version: 1.21.0
+          woo_blocks_version: 6.8.0
+          automate_woo_version: 5.1.1
           codeception_image_version: 7.2-cli_20220605.0
           mysql_command: --max_allowed_packet=100M --default-storage-engine=MYISAM
           mysql_image: mysql:5.5
