--- a/mailpoet/package.json
+++ b/mailpoet/package.json
@@ -35,6 +35,7 @@
     "@marvelapp/react-ab-test": "^3.1.0",
     "@types/select2": "^4.0.55",
     "@woocommerce/components": "^10.0.0",
+    "@woocommerce/currency": "^4.2.0",
     "@woocommerce/date": "^4.2.0",
     "@wordpress/a11y": "^3.28.0",
     "@wordpress/api-fetch": "^6.25.0",
