--- a/mailpoet/package.json
+++ b/mailpoet/package.json
@@ -33,6 +33,7 @@
     "@emotion/styled": "^11.8.1",
     "@mailpoet/components": "workspace:^",
     "@marvelapp/react-ab-test": "^3.1.0",
+    "@svgr/webpack": "^8.0.1",
     "@types/select2": "^4.0.55",
     "@woocommerce/components": "^12.0.0",
     "@woocommerce/currency": "^4.2.0",
@@ -73,6 +74,7 @@
     "classnames": "^2.3.1",
     "codemirror": "^5.65.2",
     "css": "^3.0.0",
+    "css-loader": "^6.8.1",
     "date-fns": "^2.28.0",
     "file-saver": "^2.0.5",
     "handlebars": "^4.7.7",
@@ -100,6 +102,7 @@
     "react-string-replace": "^1.0.0",
     "react-tooltip": "^4.2.21",
     "reakit": "^1.3.11",
+    "sass-loader": "^13.3.2",
     "satismeter-loader": "^1.1.0",
     "select2": "^4.1.0-rc.0",
     "setimmediate": "^1.0.5",
