--- a/mailpoet/package.json
+++ b/mailpoet/package.json
@@ -38,6 +38,7 @@
     "@woocommerce/components": "^12.0.0",
     "@woocommerce/currency": "^4.2.0",
     "@woocommerce/date": "^4.2.0",
+    "@woocommerce/settings": "^1.0.0",
     "@wordpress/a11y": "^3.28.0",
     "@wordpress/api-fetch": "^6.25.0",
     "@wordpress/block-editor": "^11.5.0",
