--- a/mailpoet/composer.json
+++ b/mailpoet/composer.json
@@ -28,7 +28,7 @@
     "phpunit/phpunit": "8.5.25",
     "totten/lurkerlite": "^1.3",
     "vlucas/phpdotenv": "5.4.1",
-    "wp-cli/wp-cli-bundle": "^2.5"
+    "wp-cli/wp-cli-bundle": "2.8.1"
   },
   "autoload": {
     "classmap": [
