--- a/dev/php82/Dockerfile
+++ b/dev/php82/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:8.2.0RC6-apache
+FROM wordpress:php8.2-apache
 
 ARG UID=1000
 ARG GID=1000
@@ -27,7 +27,7 @@ RUN printf "account default\nhost smtp\nport 1025" > /etc/msmtprc
 
 # xdebug build an config
 ENV XDEBUGINI_PATH=/usr/local/etc/php/conf.d/xdebug.ini
-RUN git clone -b "3.2.0RC2" --depth 1 https://github.com/xdebug/xdebug.git /usr/src/php/ext/xdebug \
+RUN git clone -b "3.2.2" --depth 1 https://github.com/xdebug/xdebug.git /usr/src/php/ext/xdebug \
     && docker-php-ext-configure xdebug --enable-xdebug-dev \
     && docker-php-ext-install xdebug \
     && mkdir /tmp/debug
