--- a/mailpoet/composer.json
+++ b/mailpoet/composer.json
@@ -19,15 +19,15 @@
     "codeception/module-db": "^1.1",
     "codeception/module-webdriver": "^1.4",
     "codeception/verify": "1.5.0",
-    "composer/composer": "^2.2.22",
+    "composer/composer": "^2.2",
     "composer/xdebug-handler": "^3.0.3",
-    "consolidation/robo": "3.0.11",
-    "guzzlehttp/guzzle": "6.5.8",
+    "consolidation/robo": "^4.0",
+    "guzzlehttp/guzzle": "^7.8",
     "hoa/console": "^3.17",
     "lucatume/wp-browser": "3.2.1",
     "phpunit/phpunit": "9.6.13",
     "totten/lurkerlite": "^1.3",
-    "vlucas/phpdotenv": "5.4.1",
+    "vlucas/phpdotenv": "^5.5",
     "wp-cli/wp-cli-bundle": "2.8.1"
   },
   "autoload": {
